fix: merge field fallbacks and help text

--- a/crm/index.html
+++ b/crm/index.html
@@ -1026,7 +1026,7 @@
       <!-- Email Templates -->
       <section class="page" id="page-emails">
         <div class="page-header"><h1>📧 Email & Scheduling</h1></div>
-        <p style="color:var(--joe-gray);margin-bottom:20px">Create reusable email templates with merge fields. Use <code style="background:#f3f4f6;padding:2px 6px;border-radius:4px" class="merge-field">first_name</code>, <code style="background:#f3f4f6;padding:2px 6px;border-radius:4px" class="merge-field">company</code>, <code style="background:#f3f4f6;padding:2px 6px;border-radius:4px" class="merge-field">signature</code></p>
+        <p style="color:var(--joe-gray);margin-bottom:20px">Create reusable email templates with merge fields. Use <code style="background:#f3f4f6;padding:2px 6px;border-radius:4px">{{first_name}}</code>, <code style="background:#f3f4f6;padding:2px 6px;border-radius:4px">{{company}}</code>. Signature is added automatically.</p>
 
         
         <!-- Scheduling Section -->
@@ -2598,7 +2598,6 @@
               Merge fields: 
               <code onclick="insertTemplateMergeField('{{first_name}}')" style="cursor:pointer;background:#f3f4f6;padding:2px 6px;border-radius:4px">{{first_name}}</code>
               <code onclick="insertTemplateMergeField('{{company}}')" style="cursor:pointer;background:#f3f4f6;padding:2px 6px;border-radius:4px">{{company}}</code>
-              <code onclick="insertTemplateMergeField('{{signature}}')" style="cursor:pointer;background:#f3f4f6;padding:2px 6px;border-radius:4px">{{signature}}</code>
             </div>
           </div>
           <div style="display:flex;align-items:center;gap:4px;padding:8px;background:#f8f9fa;border:1px solid #e5e7eb;border-bottom:none;border-radius:8px 8px 0 0;flex-wrap:wrap">
@@ -4797,11 +4796,11 @@ async function renderContactActivities(id){
       const mergeFields=(text)=>{
         if(!text)return text;
         return text
-          .replace(/\{\{first_name\}\}/g,contact.first_name||'')
+          .replace(/\{\{first_name\}\}/g,contact.first_name||'there')
           .replace(/\{\{last_name\}\}/g,contact.last_name||'')
           .replace(/\{\{email\}\}/g,contact.email||'')
           .replace(/\{\{phone\}\}/g,contact.phone||'')
-          .replace(/\{\{company\}\}/g,company?.name||'')
+          .replace(/\{\{company\}\}/g,company?.name||'your coffee shop')
           .replace(/\{\{deal_name\}\}/g,deal?.name||'')
           .replace(/\{\{deal_amount\}\}/g,deal?.amount?'$'+deal.amount.toLocaleString():'')
           .replace(/\{\{sender_name\}\}/g,currentUser?.name||'')
