getting team members to display

--- a/crm/index.html
+++ b/crm/index.html
@@ -12300,20 +12300,16 @@ ${activity.notes||'No notes'}`);
       // Render All Team Members
       const allTable=document.getElementById('all-team-table');
       if(allTable){
-        allTable.innerHTML=teamMembers.length?teamMembers.map(m=>{
+        allTable.innerHTML=teamMembers.map(m=>{
           const isMe=m.email===currentUser?.email;
-          const avatarHtml=m.avatar_url?`<img src="${m.avatar_url}" style="width:32px;height:32px;border-radius:50%;object-fit:cover">`:`<div class="user-avatar" style="width:32px;height:32px;font-size:12px">${m.name?m.name[0].toUpperCase():"?"}</div>`;
           return`<tr>
-            <td><div style="display:flex;align-items:center;gap:10px">${avatarHtml}<div style="font-weight:600">${m.name||'—'}${isMe?' <span style="color:var(--joe-accent)">(you)</span>':''}</div></div></td>
+            <td style="font-weight:600">${m.name||'—'}${isMe?' <span style="color:var(--joe-accent)">(you)</span>':''}</td>
             <td style="font-size:12px;color:var(--joe-gray)">${m.email}</td>
             <td><span class="badge">${ROLE_LABELS[m.role]||m.role||'—'}</span></td>
             <td style="font-size:12px">${m.department||'—'}</td>
-            <td class="actions-cell">
-              <button class="action-btn" onclick="editTeamMember('${m.id}','${m.email}')" title="Edit">✏️</button>
-              ${!isMe?`<button class="action-btn" onclick="deleteTeamMember('${m.id}','${m.name||m.email}')" title="Delete" style="color:var(--joe-red)">🗑️</button>`:''}
-            </td>
+            <td><button class="action-btn" onclick="editTeamMember('${m.id}','${m.email}')">✏️</button>${!isMe?`<button class="action-btn" onclick="deleteTeamMember('${m.id}','${m.name}')" style="color:var(--joe-red)">🗑️</button>`:''}</td>
           </tr>`;
-        }).join(''):'<tr><td colspan="5" class="empty-state">No team members</td></tr>';
+        }).join('');
       }
       
       // Leaderboard
