fix bug team members

--- a/crm/index.html
+++ b/crm/index.html
@@ -3121,6 +3121,7 @@
       if(currentUser.avatar)av.innerHTML='<img src="'+currentUser.avatar+'">';else av.textContent=currentUser.name[0].toUpperCase();
       // Sync avatar to team_members (will update local array after loadAllData)
       loadApiKeys();loadAllData().then(()=>{
+        renderTeam();
         if(currentUser.avatar){
           db.from('team_members').update({avatar_url:currentUser.avatar,name:currentUser.name}).eq('email',currentUser.email);
           const me=teamMembers.find(t=>t.email===currentUser.email);
