--- a/crm/index.html
+++ b/crm/index.html
@@ -12210,6 +12210,8 @@ ${activity.notes||'No notes'}`);
     };
     
     function renderTeam(){
+      console.log('renderTeam called, teamMembers:', teamMembers.length);
+      console.log('allTable element:', document.getElementById('all-team-table'));
       const weekAgo=new Date(Date.now()-7*24*60*60*1000);
       const monthAgo=new Date(Date.now()-30*24*60*60*1000);
       const today=new Date().toISOString().split('T')[0];
