--- a/crm/index.html
+++ b/crm/index.html
@@ -12303,6 +12303,8 @@ ${activity.notes||'No notes'}`);
       // Render All Team Members
       const allTable=document.getElementById('all-team-table');
       if(allTable){
+        console.log('Setting all-team-table innerHTML');
+        try {
         allTable.innerHTML=teamMembers.map(m=>{
           const isMe=m.email===currentUser?.email;
           return`<tr>
@@ -12313,6 +12315,8 @@ ${activity.notes||'No notes'}`);
             <td><button class="action-btn" onclick="editTeamMember('${m.id}','${m.email}')">✏️</button>${!isMe?`<button class="action-btn" onclick="deleteTeamMember('${m.id}','${m.name}')" style="color:var(--joe-red)">🗑️</button>`:''}</td>
           </tr>`;
         }).join('');
+        console.log('all-team-table innerHTML set, length:', allTable.innerHTML.length);
+        } catch(e) { console.error('Error in all-team-table:', e); }
       }
       
       // Leaderboard
