--- a/crm/index.html
+++ b/crm/index.html
@@ -12307,7 +12307,9 @@ ${activity.notes||'No notes'}`);
       }
       
       // Render All Team Members
-      allTable.innerHTML=teamMembers.map(m=>{
+      const allTable=document.getElementById('all-team-table');
+      if(allTable){
+        allTable.innerHTML=teamMembers.map(m=>{
           const isMe=m.email===currentUser?.email;
           const handles=m.handles||[];
           const handlesHtml=handles.length?handles.map(h=>`<span class="activity-tag ${h}">#${h}</span>`).join(' '):'—';
