adding icp to stuff

--- a/crm/index.html
+++ b/crm/index.html
@@ -4251,6 +4251,7 @@ function renderDeals(){
         <h4>${d.name}</h4>
         <div class="meta">${co?co.name:ct?ct.first_name+' '+ct.last_name:'-'}</div>
         ${city?`<div class="meta">📍 ${city}</div>`:''}
+        ${co?.icp_tier?`<span class="badge ${co.icp_tier==='high'?'badge-green':co.icp_tier==='medium'?'badge-yellow':'badge-gray'}" style="font-size:9px">🎯 ${co.icp_tier.toUpperCase()}</span>`:''}
         ${obSubStage}
         ${d.amount?`<div class="amount">$${d.amount.toLocaleString()}</div>`:''}
         <div class="card-footer">
