icp lables and role

--- a/crm/index.html
+++ b/crm/index.html
@@ -4251,7 +4251,7 @@ function renderDeals(){
         <h4>${d.name}</h4>
         <div class="meta">${co?co.name:ct?ct.first_name+' '+ct.last_name:'-'}</div>
         ${city?`<div class="meta">📍 ${city}</div>`:''}
-        ${co?.icp_tier?`<span class="badge ${co.icp_tier==='high'?'badge-green':co.icp_tier==='medium'?'badge-yellow':'badge-gray'}" style="font-size:9px">🎯 ${co.icp_tier.toUpperCase()}</span>`:''}
+        ${co?.icp_tier?`<span class="badge ${ICP_COLORS[co.icp_tier]||'badge-gray'}" style="font-size:9px">🎯 ${ICP_LABELS[co.icp_tier]||co.icp_tier}</span>`:''}
         ${obSubStage}
         ${d.amount?`<div class="amount">$${d.amount.toLocaleString()}</div>`:''}
         <div class="card-footer">
@@ -12205,6 +12205,29 @@ ${activity.notes||'No notes'}`);
       showToast('Copied to Roam format!');
     }
 
+    const ICP_LABELS={
+      'icp_1':'ICP-1: Single Cafe',
+      'icp_2':'ICP-2: Cafe + Roaster',
+      'icp_3':'ICP-3: Small Roaster (2-4)',
+      'icp_4':'ICP-4: Large Roaster (5+)',
+      'icp_5':'ICP-5: Multi-loc Cafe (5+)',
+      'icp_6':'ICP-6: Drive-Thru',
+      'icp_7':'ICP-7: Franchise',
+      'icp_8':'ICP-8: Mobile/Kiosk',
+      'not_a_fit':'Not a Fit'
+    };
+    const ICP_COLORS={
+      'icp_1':'badge-green',
+      'icp_2':'badge-green',
+      'icp_3':'badge-yellow',
+      'icp_4':'badge-yellow',
+      'icp_5':'badge-yellow',
+      'icp_6':'badge-yellow',
+      'icp_7':'badge-gray',
+      'icp_8':'badge-gray',
+      'not_a_fit':'badge-red'
+    };
+    
     // Team Management
     let currentMemberId=null;
     const ROLE_LABELS={
