icp tier saving

--- a/crm/index.html
+++ b/crm/index.html
@@ -3150,7 +3150,7 @@
 
     let allPartners=[];
     let allShopsForMap=[];
-    const SHOP_COLUMNS = 'id,name,city,state,state_code,address,phone,email,website,contact_name,lead_score,lead_source,lifecycle_stage,pipeline_stage,is_joe_partner,assigned_to,created_at,current_pos,coffee_shop_type,google_rating,total_reviews,lat,lng';
+    const SHOP_COLUMNS = 'id,name,city,state,state_code,address,phone,email,website,contact_name,lead_score,lead_source,lifecycle_stage,pipeline_stage,is_joe_partner,assigned_to,created_at,current_pos,coffee_shop_type,google_rating,total_reviews,lat,lng,icp_tier,icp_fit_score';
     
     async function loadMapShops() {
       // Fetch all shops with coordinates for map filtering
