fix: wait for auth session

--- a/crm/sales-dashboard/index.html
+++ b/crm/sales-dashboard/index.html
@@ -108,7 +108,7 @@
     const ICP_PRIORITY={'icp_1':'high','icp_2':'high','icp_3':'medium','icp_4':'medium','icp_5':'medium','icp_6':'medium','icp_7':'low','icp_8':'low','not_a_fit':'low'};
     const TERRITORIES={east:['CT','DE','FL','GA','MA','MD','ME','NC','NH','NJ','NY','PA','RI','SC','VA','VT','WV','DC'],midwest:['AL','AR','IA','IL','IN','KS','KY','LA','MI','MN','MO','MS','ND','NE','OH','OK','SD','TN','TX','WI'],west:['AK','AZ','CA','CO','HI','ID','MT','NM','NV','OR','UT','WA','WY']};
     let deals=[],shops=[],bookings=[],pipelines=[];
-    async function init(){
+    async function init(){await new Promise(r=>setTimeout(r,500));
       const{data:{user}}=await db.auth.getUser();
       if(!user){window.location.href='/crm/';return;}
       const[dealsRes,shopsRes,bookingsRes,pipelinesRes]=await Promise.all([
