sales dashboard link

--- a/crm/index.html
+++ b/crm/index.html
@@ -405,6 +405,7 @@
       <div class="nav-section">
         <div class="nav-section-title">Overview</div>
         <div class="nav-item active" data-page="dashboard"><span>📊</span> <span>Dashboard</span></div>
+        <a href="/crm/sales-dashboard/" class="nav-item" style="text-decoration:none;color:inherit"><span>📈</span> <span>Sales Dashboard</span></a>
       </div>
       <div class="nav-section">
         <div class="nav-section-title">Sales</div>
