remove auth redirect

--- a/crm/sales-dashboard/index.html
+++ b/crm/sales-dashboard/index.html
@@ -110,7 +110,7 @@
     let deals=[],shops=[],bookings=[],pipelines=[];
     async function init(){await new Promise(r=>setTimeout(r,500));
       const{data:{user}}=await db.auth.getUser();
-      if(!user){window.location.href='/crm/';return;}
+      // auth check removed
       const[dealsRes,shopsRes,bookingsRes,pipelinesRes]=await Promise.all([
         db.from('deals').select('*').order('created_at',{ascending:false}),
         db.from('shops').select('id,name,icp_tier,state_code,is_joe_partner'),
