Add styled CMS at /cms with CRM sidebar link

--- a/crm/index.html
+++ b/crm/index.html
@@ -429,6 +429,7 @@
         <a href="/owner/admin.html" target="_blank" class="nav-item" style="text-decoration:none"><span>👑</span> <span>Owner Admin</span></a>
         <a href="/cms/" target="_blank" class="nav-item" style="text-decoration:none"><span>📝</span> <span>Content Studio</span></a>
         <a href="/cms/" target="_blank" class="nav-item" style="text-decoration:none"><span>📝</span> <span>Content Studio</span></a>
+        <a href="/cms/" target="_blank" class="nav-item" style="text-decoration:none"><span>📝</span> <span>Content Studio</span></a>
       </div>
       <div class="sidebar-user">
         <div class="user-info">
