Serve CMS config via function

--- a/cms/index.html
+++ b/cms/index.html
@@ -673,6 +673,7 @@
 
   <!-- Decap CMS -->
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <script>CMS.init({ config: { load_config_file: false, backend: { name: "git-gateway", branch: "main" }, media_folder: "images/uploads", public_folder: "/images/uploads", site_url: "https://joe.coffee", collections: [] } });</script>
   
   <script>
     // Hide loading screen once CMS is ready
