Fix: Always fetch fresh shop data for deal page verification status

--- a/crm/index.html
+++ b/crm/index.html
@@ -5313,7 +5313,8 @@ async function showDealPage(id){
         document.getElementById('deal-page-title').textContent=d.name||'Untitled Deal';
         
         // Fetch shop from DB if not in memory
-        let shop=shops.find(s=>s.id===d.shop_id);
+        // Always fetch fresh shop data for verification status
+        let shop=null;
         if(!shop && d.shop_id){
           const {data}=await db.from('shops').select('*').eq('id',d.shop_id).maybeSingle();
           shop=data;
