New Google Maps API key

--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZDBTej3OX4KngmuZSwS26VUEvYSyp8Wc&libraries=places&callback=initPlacesAutocomplete&loading=async" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDyq7Gjk4Ls6RRGr0-7OPR6r_AGI1fOfOU&libraries=places&callback=initPlacesAutocomplete&loading=async" async defer></script></script>
     <style>
         :root {
             --black: #000000;
