Fix autocomplete light theme

--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light">
     <title>Joe | POS For Coffee Shops</title>
     <meta name="description" content="Joe is the complete operating system for independent coffee shops. POS, mobile ordering, loyalty, marketing, payroll, and payments—all in one platform.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -394,9 +395,10 @@
         .form-label { font-size: 0.8125rem; font-weight: 500; color: var(--gray-700); }
         .form-input, .form-select { padding: 0.75rem 1rem; font-size: 0.9375rem; font-family: var(--font-body); background: var(--white); border: 1px solid var(--gray-200); border-radius: 8px; color: var(--gray-900); }
         .form-input:focus, .form-select:focus { outline: none; border-color: var(--gray-900); }
-        #address-autocomplete-container { width: 100%; }
+        #address-autocomplete-container { width: 100%; color-scheme: light; }
         #address-autocomplete-container gmp-place-autocomplete { 
             width: 100%; 
+            color-scheme: light;
             --gmp-mat-color-surface: #fff;
             --gmp-mat-color-on-surface: #171717;
             --gmp-mat-color-primary: #171717;
@@ -853,7 +855,7 @@
                                 </div>
                                 <div class="form-group form-group--full">
                                     <label class="form-label" for="form-address">Address *</label>
-                                    <div id="address-autocomplete-container" style="min-height: 48px;"><input type="text" class="form-input" placeholder="Loading address search..." disabled style="width:100%"></div>
+                                    <div id="address-autocomplete-container" style="min-height: 48px; color-scheme: light;"><input type="text" class="form-input" placeholder="Loading address search..." disabled style="width:100%"></div>
                                     <input type="hidden" id="form-address-value" name="address" value="">
                                 </div>
                                 <div class="form-group form-group--full">
@@ -960,7 +962,7 @@
             });
             
             // Apply white background styling
-            autocomplete.setAttribute('style', 'width: 100%; --gmp-color-surface: #ffffff; --gmp-color-on-surface: #171717;');
+            autocomplete.style.cssText = 'width: 100%; color-scheme: light;';
             
             // Clear container and add autocomplete
             addressContainer.innerHTML = '';
