Fix address, add confirmation emails, update thank you page

--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -1199,7 +1199,7 @@
                     email: formData.get('email'),
                     phone: formData.get('phone'),
                     company_name: formData.get('company_name'),
-                    address: formData.get('address'),
+                    address: addressValue || formData.get('address'),
                     website: formData.get('website') || null,
                     source: 'inbound',
                     form_name: 'shop-inquiry',
