Fix address, add confirmation emails, update thank you page

--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -126,8 +126,8 @@
       
       <div class="schedule-card">
         <h2>Don't want to wait?</h2>
-        <p>Schedule a call with Ally, your onboarding manager, right now.</p>
-        <a href="https://joe.coffee/schedule/ally" class="btn-cta">Schedule a Call with Ally →</a>
+        <p>Schedule a call with our team right now.</p>
+        <a href="https://joe.coffee/schedule/brenden" class="btn-cta">Schedule a Call →</a>
       </div>
       
       <div class="cta-buttons">
