updates to crm and emails

--- a/crm/index.html
+++ b/crm/index.html
@@ -3271,7 +3271,7 @@
       // Load map shops in background
       loadMapShops().then(()=>{if(map&&mapVisible)renderMapMarkers();});
       
-      const DEAL_COLUMNS = 'id,name,shop_id,pipeline_id,stage,amount,close_date,assigned_to,contact_id,created_at,updated_at,notes,launched_at,onboarding_checklist,metadata,ob_sub_stage,lost_reason,lost_at';
+      const DEAL_COLUMNS = 'id,name,shop_id,company_id,pipeline_id,stage,amount,close_date,assigned_to,contact_id,created_at,updated_at,notes,launched_at,onboarding_checklist,metadata,ob_sub_stage,lost_reason,lost_at';
       const CONTACT_COLUMNS = 'id,first_name,last_name,email,phone,job_title,company_id,shop_id,lifecycle_stage,lead_source,lead_status,assigned_to,created_at,updated_at';
       const[sh,partners,c,co,d,seq,t,a,e,tm,mn,et,wa]=await Promise.all([
         db.from('shops').select(SHOP_COLUMNS).order('lead_score',{ascending:false}).range(0,49),
