--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -533,8 +533,8 @@
         <section class="stats">
             <div class="container">
                 <div class="stats-grid">
-                    <div class="reveal"><div class="stat-value">500+</div><div class="stat-label">Partner Shops</div></div>
-                    <div class="reveal reveal-delay-1"><div class="stat-value">40k+</div><div class="stat-label">Active App Users</div></div>
+                    <div class="reveal"><div class="stat-value">64,697</div><div class="stat-label">Coffee Shops</div></div>
+                    <div class="reveal reveal-delay-1"><div class="stat-value">200,000+</div><div class="stat-label">Active Patrons</div></div>
                     <div class="reveal reveal-delay-2"><div class="stat-value">2.75%</div><div class="stat-label">Flat Processing</div></div>
                 </div>
             </div>
