Update scheduling links to Ally, enhance claim confirmation email

--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -127,7 +127,7 @@
       <div class="schedule-card">
         <h2>Don't want to wait?</h2>
         <p>Schedule a call with our team right now.</p>
-        <a href="https://joe.coffee/schedule/brenden" class="btn-cta">Schedule a Call →</a>
+        <a href="https://joe.coffee/schedule/allyjae" class="btn-cta">Schedule a Call →</a>
       </div>
       
       <div class="cta-buttons">
