Add GBP integration: functions + Coming Soon tab in owner dashboard

--- a/owner/index.html
+++ b/owner/index.html
@@ -110,6 +110,7 @@
     <div class="tabs">
       <div class="tab active" onclick="switchTab('analytics')">📊 Analytics</div>
       <div class="tab" onclick="switchTab('edit')">✏️ Edit Listing</div>
+      <div class="tab" onclick="switchTab('gbp')">🔗 Google Business</div>
     </div>
 
     <!-- Analytics Tab -->
@@ -283,6 +284,24 @@
           <!-- Populated by JS -->
         </div>
         <button type="button" class="btn btn-primary" onclick="saveHours()" style="margin-top:1rem">Save Hours</button>
+      </div>
+    </div>
+
+    <!-- GBP Tab -->
+    <div id="tab-gbp" style="display:none">
+      <div class="card" style="text-align:center;padding:3rem">
+        <div style="font-size:3rem;margin-bottom:1rem">🔗</div>
+        <h3 style="font-size:1.25rem;margin-bottom:0.5rem">Google Business Profile Integration</h3>
+        <p style="color:#666;margin-bottom:1.5rem">Coming Soon!</p>
+        <div style="background:#f9fafb;border-radius:8px;padding:1.5rem;max-width:400px;margin:0 auto;text-align:left">
+          <p style="font-weight:600;margin-bottom:0.75rem">Soon you will be able to:</p>
+          <ul style="color:#666;margin-left:1.25rem;line-height:1.8">
+            <li>Add joe ordering link to Google Maps</li>
+            <li>Sync your hours automatically</li>
+            <li>Keep your listing up to date</li>
+          </ul>
+        </div>
+        <p style="color:#999;font-size:0.875rem;margin-top:1.5rem">We are finalizing our Google Business Profile API access.<br>Check back soon!</p>
       </div>
     </div>
 
@@ -587,6 +606,7 @@ async function handleSignedIn(user) {
       
       document.getElementById('tab-analytics').style.display = tab === 'analytics' ? 'block' : 'none';
       document.getElementById('tab-edit').style.display = tab === 'edit' ? 'block' : 'none';
+      document.getElementById('tab-gbp').style.display = tab === 'gbp' ? 'block' : 'none';
     }
 
     document.getElementById('editForm').addEventListener('submit', async (e) => {
