--- a/owner/index.html
+++ b/owner/index.html
@@ -218,22 +218,30 @@
           <div class="form-group">
             <label>Amenities</label>
             <div style="display:flex;flex-wrap:wrap;gap:8px;margin-top:4px" id="editAmenities">
-              <label class="amenity-tag"><input type="checkbox" data-amenity="wifi"> WiFi</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="outdoor_seating"> Outdoor Seating</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="indoor_seating"> Indoor Seating</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="restroom"> Restroom</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="parking"> Parking</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="drive_thru"> Drive-Thru</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="wheelchair"> Wheelchair Access</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="pets_allowed"> Pet Friendly</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="power_outlets"> Power Outlets</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="laptop_friendly"> Laptop Friendly</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="good_for_groups"> Good for Groups</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="food_menu"> Food Menu</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="pastries"> Pastries/Bakery</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="vegan_options"> Vegan Options</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="alcohol"> Beer/Wine</label>
-              <label class="amenity-tag"><input type="checkbox" data-amenity="roasts_onsite"> Roasts On-Site</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="WiFi"> WiFi</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Pickup"> Pickup</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Curbside"> Curbside</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Dine-In"> Dine-In</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Delivery"> Delivery</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Private Meeting Rooms"> Private Meeting Rooms</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Quiet Room"> Quiet Room</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Child Play Area"> Child Play Area</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Outdoor Seating"> Outdoor Seating</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Indoor Seating"> Indoor Seating</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Drive-Thru"> Drive-Thru</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Restroom"> Restroom</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Parking"> Parking</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Wheelchair Access"> Wheelchair Access</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Pet Friendly"> Pet Friendly</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Power Outlets"> Power Outlets</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Laptop Friendly"> Laptop Friendly</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Food Menu"> Food Menu</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Pastries"> Pastries/Bakery</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Vegan Options"> Vegan Options</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Beer/Wine"> Beer/Wine</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Roasts On-Site"> Roasts On-Site</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Retail"> Retail/Merch</label>
+              <label class="amenity-tag"><input type="checkbox" data-amenity="Live Music"> Live Music</label>
             </div>
           </div>
           
